Comentando explicação do .gitignore e consenso commit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-
+<!-- No  arquivo .gitignore caso queira que o git ignore uma pasta escreva o nome da pasta + a barra. exemplo: ide/ -->
+<!-- CONSENSO -> "VC NUNCA DEVE COMMITAR UM CÓDIGO QUE NÃO FUNCIONA" SEU CÓDIGO DEVE ESTAR SEMPRE FUNCIONAL ANTES DE COMMITAR -->
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
